minor edit, kill readme

--- a/dist.ini
+++ b/dist.ini
@@ -13,7 +13,7 @@ repo             = https://github.com/terminalfool/Net-DNS-Dynamic-Adfilter
 [PruneFiles]
 match = dist.ini
 [License]
-
+[Readme]
 [PkgVersion]
 [PodVersion]
 [AutoPrereqs]
