--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ license          = Perl_5
 copyright_holder = David Watson
 
 [GatherDir]
-[MetaYAML]
+[MetaJSON]
 [MakeMaker]
 [Manifest]
 [PruneCruft]
@@ -18,4 +18,3 @@ match = dist.ini
 [AutoPrereqs]
 [@Git]
 [GitHub::Meta]
-repo             = https://github.com/terminalfool/Net-DNS-Dynamic-Adfilter
