--- a/dist.ini
+++ b/dist.ini
@@ -1,18 +1,18 @@
 name             = Net-DNS-Dynamic-Adfilter
-version          = 0.066
+version          = 0.067
 author           = David Watson <dwatson@cpan.org>
 license          = Perl_5
 copyright_holder = David Watson
 
 [GatherDir]
 [MetaJSON]
+[MetaYAML]
 [MakeMaker]
 [Manifest]
 [PruneCruft]
 [PruneFiles]
 match = dist.ini
 [License]
-[Readme]
 [PkgVersion]
 [PodVersion]
 [AutoPrereqs]
