minor edits, improve kwalitee

--- a/dist.ini
+++ b/dist.ini
@@ -1,11 +1,12 @@
 name             = Net-DNS-Dynamic-Adfilter
-version          = 0.067
+version          = 0.068
 author           = David Watson <dwatson@cpan.org>
 license          = Perl_5
 copyright_holder = David Watson
 
 [GatherDir]
 [MetaJSON]
+[MetaYAML]
 [MakeMaker]
 [Manifest]
 [PruneCruft]
@@ -14,6 +15,8 @@ match = dist.ini
 [License]
 [PkgVersion]
 [PodVersion]
+[PodSyntaxTests]
+[PodCoverageTests]
 [AutoPrereqs]
 [@Git]
 [GitHub::Meta]
