--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name             = Net-DNS-Dynamic-Adfilter
-version          = 0.068
+version          = 0.069
 author           = David Watson <dwatson@cpan.org>
 license          = Perl_5
 copyright_holder = David Watson
@@ -15,6 +15,8 @@ match = dist.ini
 [License]
 [PkgVersion]
 [PodVersion]
+[NextRelease]
+format = %v %{EEE MMM d hh:mm:ss V yyyy}d
 [PodSyntaxTests]
 [PodCoverageTests]
 [AutoPrereqs]
