--- a/dist.ini
+++ b/dist.ini
@@ -7,7 +7,8 @@ copyright_holder = David Watson
 [GatherDir]
 [MetaJSON]
 [MetaYAML]
-[MakeMaker]
+[ReadmeFromPod]
+[=inc::script]
 [Manifest]
 [PruneCruft]
 [PruneFiles]
