simplify script installation

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name             = Net-DNS-Dynamic-Adfilter
-version          = 0.070
+version          = 0.071
 author           = David Watson <dwatson@cpan.org>
 license          = Perl_5
 copyright_holder = David Watson
@@ -8,12 +8,13 @@ copyright_holder = David Watson
 [MetaJSON]
 [MetaYAML]
 [ReadmeFromPod]
-[=inc::script]
+[MakeMaker]
+[ExecDir]
+dir = scripts
 [Manifest]
 [PruneCruft]
 [PruneFiles]
 match = dist.ini
-match = inc/
 [License]
 [PkgVersion]
 [PodVersion]
